--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
                   <% end %>
                 </li>
                 <li class="nav-link text-light">
-                  <%= link_to '#' do %>
+                  <%= link_to about_path do %>
                     <i class="fa-solid fa-link">About</i>
                   <% end %>
                 </li>
