--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,35 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <image></image>
+      <table class="table">
+        <tbody>
+          <tr>
+            <th>name</th>
+            <th></th>
+          </tr>
+          <tr>
+            <th>introduction</th>
+            <th></th>
+          </tr>
+        </tbody>
+      </table>
+      <div class="row">
+        <button class="btn out-line-secondary btn-block">
+          <%= link_to do %>
+            <i class="fa-solid fa-user-gear"></i>
+          <% end %>
+        </button>
+      </div>
+      <h2 class="mt-3 pb-3">New Book</h2>
+      <%= form_with model: Book.new do |f| %>
+        <h6>Title</h6>
+        <%= f.text_field :title %>
+        <h6>Opinion</h6>
+        <%= f.text_area :body %>
+        <%= f.submit 'Create Book' %>
+      <% end %>
+    </div>
+  </div>
+</div>
