--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,13 +23,32 @@
         </button>
       </div>
       <h2 class="mt-3 pb-3">New Book</h2>
-      <%= form_with model: Book.new do |f| %>
+      <%= form_with model: @book do |f| %>
         <h6>Title</h6>
         <%= f.text_field :title %>
         <h6>Opinion</h6>
         <%= f.text_area :body %>
         <%= f.submit 'Create Book' %>
       <% end %>
+    </div>
+    
+    
+    
+    <div class="col-md-8 offset-md-1">
+      <h2>Books</h2>
+      <table class="table table-hover table-inverse">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+          
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
