--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,7 +23,7 @@
         </button>
       </div>
       <h2 class="mt-3 pb-3">New Book</h2>
-      <%= form_with model: @book do |f| %>
+      <%= form_with model: @book, url: '/books', method: :post do |f| %>
         <h6>Title</h6>
         <%= f.text_field :title %>
         <h6>Opinion</h6>
@@ -42,11 +42,16 @@
             <th></th>
             <th>Title</th>
             <th>Opinion</th>
-            <th colspan="3"></th>
           </tr>
         </thead>
         <tbody>
-          
+        <% @books.each do |book| %>
+          <tr>
+            <th></th>
+            <th><%= book.title %></th>
+            <th><%= book.body %></th>
+          </tr>
+        <% end %>
         </tbody>
       </table>
     </div>
