--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,17 +7,17 @@
         <tbody>
           <tr>
             <th>name</th>
-            <th></th>
+            <th><%= @user.name %></th>
           </tr>
           <tr>
             <th>introduction</th>
-            <th></th>
+            <th><%= @user.introduction %></th>
           </tr>
         </tbody>
       </table>
       <div class="row">
         <button class="btn out-line-secondary btn-block">
-          <%= link_to do %>
+          <%= link_to edit_user_path(@user) do %>
             <i class="fa-solid fa-user-gear"></i>
           <% end %>
         </button>
@@ -47,9 +47,9 @@
         <tbody>
         <% @books.each do |book| %>
           <tr>
-            <th></th>
-            <th><%= book.title %></th>
-            <th><%= book.body %></th>
+            <td></td>
+            <td><%= book.title %></td>
+            <td><%= book.body %></td>
           </tr>
         <% end %>
         </tbody>
