--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-3">
       <h2>User info</h2>
-      <image></image>
+      <%= image_tag @user.get_profile_image(100,100) %>
       <table class="table">
         <tbody>
           <tr>
@@ -47,7 +47,7 @@
         <tbody>
         <% @books.each do |book| %>
           <tr>
-            <td></td>
+            <td><%= image_tag @user.get_profile_image(100,100) %></td>
             <td><%= book.title %></td>
             <td><%= book.body %></td>
           </tr>
