--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,36 +1,9 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
-    <div class="col-md-3">
-      <h2>User info</h2>
-      <%= image_tag @user.get_profile_image(100,100) %>
-      <table class="table">
-        <tbody>
-          <tr>
-            <th>name</th>
-            <th><%= @user.name %></th>
-          </tr>
-          <tr>
-            <th>introduction</th>
-            <th><%= @user.introduction %></th>
-          </tr>
-        </tbody>
-      </table>
-      <div class="row">
-        <button class="btn out-line-secondary btn-block">
-          <%= link_to do %>
-            <i class="fa-solid fa-user-gear"></i>
-          <% end %>
-        </button>
-      </div>
-      <h2 class="mt-3 pb-3">New Book</h2>
-      <%= form_with model: @book, url: '/books', method: :post do |f| %>
-        <h6>Title</h6>
-        <%= f.text_field :title %>
-        <h6>Opinion</h6>
-        <%= f.text_area :body %>
-        <%= f.submit 'Create Book' %>
-      <% end %>
-    </div>
+    
+    
+  
+    <%= render 'book' %>
     
     
     
