--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,17 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+            <h1>Eding Book</h1>
+            <%= form_with model: @book do |f| %>
+            <h6>Title</h6>
+                <%= f.text_field :title %>
+            <h6>Opinion</h6>
+                <%= f.text_area :body %>
+            <%= f.submit 'Update Book' %>
+            <% end %>
+            <%= link_to "show", book_path(@book) %>
+            |
+            <%= link_to "back", books_path %>
+        </div>
+    </div>
+</div>
