--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,16 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h2>User info</h2>
+      <%= form_with model: @user do |f| %>
+      <h6>Name</h6>
+      <%= f.text_field :name %>
+      <h6>Image</h6>
+      <%= f.file_field :profile_image %>
+      <h6>Introduction</h6>
+      <%= f.text_area :introduction %>
+      <%= f.submit "Update User" %>
+      <% end %>
+    </div>
+  </div>
+</div>
