--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -17,7 +17,7 @@
       </table>
       <div class="row">
         <button class="btn out-line-secondary btn-block">
-          <%= link_to edit_user_path do %>
+          <%= link_to edit_user_path(@user) do %>
             <i class="fa-solid fa-user-gear"></i>
           <% end %>
         </button>
