--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,10 @@
 <div class="container px-5 px-sm-0">
-  <div class="row">
+  <div>
+  <%= flash[:notice] %>
+  </div>
     
+  <div class="row">
+  
   
     <%= render 'book' %>
     
