--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,12 +22,12 @@
             <% if @user == current_user %>
             <td>
               <button class="btn btn-sm btn-success">
-                <%= link_to "Edit", edit_book_path(@book) %>
+                <%= link_to "Edit", edit_book_path(@book.id) %>
               </button>
             </td>
             <td>
               <button class="btn btn-sm btn-danger">
-                <%= link_to "Destroy", book_path(@book), method: :delete %>
+                <%= link_to "Destroy", book_path(@book.id), method: :delete %>
               </button>
             </td>
             <% end %>
