--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -11,7 +11,7 @@
              </ul>
             <% end %>
             
-            <h1>Eding Book</h1>
+            <h1>Editing Book</h1>
             <%= form_with model: @book do |f| %>
             <h6>Title</h6>
                 <%= f.text_field :title %>
@@ -19,9 +19,9 @@
                 <%= f.text_area :body %>
             <%= f.submit 'Update Book' %>
             <% end %>
-            <%= link_to "show", book_path(@book) %>
+            <%= link_to "Show", book_path(@book) %>
             |
-            <%= link_to "back", books_path %>
+            <%= link_to "Back", books_path %>
         </div>
     </div>
 </div>
