--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -22,7 +22,7 @@
           <% end %>
         </button>
       </div>
-      <h2 class="mt-3 pb-3">New Book</h2>
+      <h2 class="mt-3 pb-3">New book</h2>
       <%= form_with model: @book, url: '/books', method: :post do |f| %>
         <h6>Title</h6>
         <%= f.text_field :title %>
