--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -29,7 +29,7 @@
           <tr>
             <td><%= image_tag @user.get_profile_image(90,90) %></td>
             <td>
-              <%= link_to book_path(book.id) do %>
+              <%= link_to book_path(@user) do %>
                 <%= book.title %>
               <%end %>
             </td>
