--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -27,7 +27,7 @@
             </td>
             <td>
               <button class="btn btn-sm btn-danger">
-                <%= link_to "Destroy", book_path(@book.id), method: :delete %>
+                <%= link_to "Destroy", book_path(@book.id), method: :delete, "data-confirm" => "本当に削しますか？"%>
               </button>
             </td>
             <% end %>
