--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
                 </li>
               <% else %>
                 <li class="nav-link text-light">
-                  <%= link_to '#' do %>
+                  <%= link_to root_path do %>
                     <i class="fa-solid fa-house">Home</i>
                   <% end %>
                 </li>
