--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -2,28 +2,28 @@
   <!--<div class="row">-->
     <div class="col-md-3">
       <h2>User info</h2>
-      <%= image_tag @user.get_profile_image(100,100) %>
+      <%= image_tag user.get_profile_image(100,100) %>
       <table class="table">
         <tbody>
           <tr>
             <th>name</th>
-            <th><%= @user.name %></th>
+            <th><%= user.name %></th>
           </tr>
           <tr>
             <th>introduction</th>
-            <th><%= @user.introduction %></th>
+            <th><%= user.introduction %></th>
           </tr>
         </tbody>
       </table>
       <div class="row">
         <button class="btn out-line-secondary btn-block">
-          <%= link_to edit_user_path(@user) do %>
+          <%= link_to edit_user_path(user) do %>
             <i class="fa-solid fa-user-gear"></i>
           <% end %>
         </button>
       </div>
       <h2 class="mt-3 pb-3">New book</h2>
-      <%= form_with model: @book, url: '/books', method: :post do |f| %>
+      <%= form_with model: Book.new, url: '/books', method: :post do |f| %>
         <h6>Title</h6>
         <%= f.text_field :title %>
         <h6>Opinion</h6>
