--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,7 +10,7 @@
     <% end %>
     
     
-    <%= render 'book' %>
+    <%= render 'book', user: current_user %>
     
     
     
@@ -27,14 +27,13 @@
         <tbody>
         <% @books.each do |book| %>
           <tr>
-            <td><%= image_tag @user.get_profile_image(90,90) %></td>
+            <td><%= link_to user_path(book.user_id) do %><%= image_tag book.user.get_profile_image(90,90) %><% end %></td>
             <td>
-              <%= link_to book_path(@user) do %>
                 <%= book.title %>
-              <%end %>
             </td>
             <td><%= book.body %></td>
           </tr>
+        
         <% end %>
         </tbody>
       </table>
