--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     
     
-    <%= render 'books/book.html.erb' %>
+    <%= render 'books/book.html.erb', user: current_user %>
     
     
     <div class="col-md-8 offset-md-1">
