--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -27,13 +27,18 @@
         <tbody>
         <% @books.each do |book| %>
           <tr>
-            <td><%= link_to user_path(book.user_id) do %><%= image_tag book.user.get_profile_image(90,90) %><% end %></td>
             <td>
+              <%= link_to user_path(book.user_id) do %>
+                <%= image_tag book.user.get_profile_image(90,90) %>
+              <% end %>
+            </td>
+            <td>
+              <%= link_to book_path(book) do %>
                 <%= book.title %>
+              <% end %>
             </td>
             <td><%= book.body %></td>
           </tr>
-        
         <% end %>
         </tbody>
       </table>
