--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     
     
-    <%= render 'books/book.html.erb', user: current_user %>
+    <%= render 'books/book.html.erb', user: @user %>
     
     
     <div class="col-md-8 offset-md-1">
@@ -19,9 +19,13 @@
         <tbody>
         <% @books.each do |book| %>
           <tr>
-            <td><%= image_tag @user.get_profile_image(90,90) %></td>
             <td>
-              <%= link_to book_path(book.id) do %>
+              <%= link_to user_path(book.user_id) do %>
+                <%= image_tag book.user.get_profile_image(90,90) %>
+              <% end %>
+            </td>
+            <td>
+              <%= link_to book_path(book) do %>
                 <%= book.title %>
                 <% end %>
             </td>
