[add] RSpec<%=render...user:@user%> コントローラーに @user=@book.user でエラー解決

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
   
   
-    <%= render 'books/book.html.erb', user: current_user %>
+    <%= render 'books/book.html.erb', user: @user %>
     
     
     
